[project]
name = "questrade-extract"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
]

[project.scripts]
questrade-extract = "questrade_extract.runner:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/questrade_extract"]
